gst-libs/gst/rtsp/gstrtspconnection.c
@@ -2231,6 +2231,7 @@ gst_rtsp_connection_close (GstRTSPConnection * conn)
   /* these were owned by the stream */
   conn->input_stream = NULL;
   conn->output_stream = NULL;
+  conn->control_stream = NULL;
 
   g_free (conn->remote_ip);
   conn->remote_ip = NULL;
